# loro

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/core/: apps.h
include/ui/: apps.h  search_bar.h  theme.h  window.h
src/: main.c
src/core/: apps.c
src/ui/: apps.c  search_bar.c  theme.c  window.c
themes/: base.ini
